Tests/InvalidTests/Test2_symbol_undefined/test.as
.entry LIST
.ent LIST
.extern W
MAIN: add r3, list
mov r1
HEY: .entry K
K: .string "hey"